--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,11 @@
-title: Stack Problems
-description: My Personal Stack Problems
-author: Agus Makmun
-github: https://github.com/agusmakmun
-about: I am freelance developer. Currently doing more in backend, focused in Python and Django.
-disqus_shortname: stackproblems
+title: zjm's blog
+description: about zjm's life
+author: charming zhong
+github: https://github.com/bfjm
+about: Data mining
+disqus_shortname: zjm
 google_analytics: UA-XXXXXXXX-Y
-avatar_url: /static/img/avatar.jpg
+avatar_url: /static/img/zjm.jpeg
 
 enableTags: true
 tagarray: []
@@ -19,27 +19,32 @@ social:
     - icon: fa-facebook
       link: "#"
     - icon: fa-twitter
-      link: "https://twitter.com/agusmakmun6"
+      link: "#"
     - icon: fa-linkedin
-      link: "https://www.linkedin.com/in/summonagus"
+      link: "#"
     - icon: fa-stack-exchange
       link: "#"
     - icon: fa-github
-      link: "https://github.com/agusmakmun"
+      link: "https://github.com/bfjm"
 
 share:
-  twitter_username: agusmakmun6
-  fb_appid: 1749788565247320
+  twitter_username:
+  fb_appid: 
 
 urls:
     - text: About Me
       url: /about/
-    - text: My Projects
-      url: /projects/
-    - text: XML Feed
-      url: /feed.xml
+    - text: Note
+      url: /note/
+    - text: Archive
+      url: /archive/
+    - text: Categories
+      url: /categories/
+    - text: tags
+      url: /tags/
 
-url: "https://agusmakmun.github.io"
+
+url: "https://bfjm.github.io"
 baseurl: ""
 paginate: 20
 per_page: 20
